Ajout d'une anchor sur contact et ajout du scroll smooth sur tout le site

--- a/svelte/src/app.css
+++ b/svelte/src/app.css
@@ -10,6 +10,10 @@
     utils: true;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 @theme {
     --color-base-100: oklch(100% 0 0);
     --color-base-200: oklch(97% 0 0);
